deployment/service-dev.yml
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-service
spec:
  type: ClusterIP
  selector:
    app: spring-boot-app
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
