deployment/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-boot-ingress
spec:
  rules:
  - host: 96.126.101.247.nip.io
    http:
      paths:
      - path: /live
        pathType: Prefix
        backend:
          service:
            name: spring-boot-service
            port:
              number: 8080
